Implemented XSLT for hotel listing

--- a/WebContent/style/main.css
+++ b/WebContent/style/main.css
@@ -105,7 +105,7 @@ h2
 	background-color: white;
 }
 
-/* Item hightlight */
+/* Item highlight */
 .hotelListItem:hover
 {
 	background-color: #F8F8F8;
