--- a/WebContent/style/main.css
+++ b/WebContent/style/main.css
@@ -69,7 +69,7 @@ h2
 	min-height:100vh;
 	background-color: #FFF;
 	
-	padding: 110px 25px 0 25px;
+	padding: 80px 25px 0 25px;
 	margin: 0 auto 0 auto;
 	
 	border: 4px solid #DDD;
@@ -85,6 +85,13 @@ h2
 {
 	border: 1px solid #C4C4C4;
 	margin-top: 50px;
+}
+
+#crumbs
+{
+	font-weight: bold;
+	font-size: 14px;
+	color: #AAA;
 }
 
 /* The hotel list div */
@@ -130,4 +137,18 @@ h2
 	margin: 0 auto 0 auto;
 	text-align:center;
 	font-size:12px;
+}
+
+/* Hotel detail page */
+#bigHotelImage
+{
+	display:block;
+	height:325px;
+	width:auto;
+	margin: 25px auto 25px auto;
+	
+	border: 2px solid white;
+	-webkit-box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.40);
+	-moz-box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.40);
+	box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.40);
 }
