--- a/WebContent/style/main.css
+++ b/WebContent/style/main.css
@@ -152,3 +152,18 @@ h2
 	-moz-box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.40);
 	box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.40);
 }
+
+#reviewListTable tr
+{
+	background-color: #FFF;
+}
+
+#reviewListTable tr:hover
+{
+	background-color: #EEE;
+}
+
+#reviewListTable tr:first-of-type
+{
+	background-color: #EEE;
+}
