--- a/WebContent/style/main.css
+++ b/WebContent/style/main.css
@@ -3,10 +3,10 @@
 *
 {
 	/* Transition the entire document */
-	-webkit-transition: all 0.1s;
-	-moz-transition: all 0.1s;
-	-o-transition: all 0.1s;
-	transition: all 0.1s;
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
+	-o-transition: all 0.2s;
+	transition: all 0.2s;
 	
 	/* Use "inner-padding" boxing style */
 	box-sizing: border-box;
@@ -143,14 +143,27 @@ h2
 #bigHotelImage
 {
 	display:block;
-	height:325px;
+	height:200px;
 	width:auto;
-	margin: 25px auto 25px auto;
+	margin: 0 25px 25px 0;
+	
+	float: right;
 	
 	border: 2px solid white;
 	-webkit-box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.40);
 	-moz-box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.40);
 	box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.40);
+}
+
+#hotelDetailDiv
+{
+	display: inline-table;
+	width:100%;
+}
+
+#reviewListTable
+{
+	margin-bottom: 25px;
 }
 
 #reviewListTable tr
@@ -166,4 +179,9 @@ h2
 #reviewListTable tr:first-of-type
 {
 	background-color: #EEE;
+}
+
+#composeReviewForm
+{
+	margin-bottom: 25px;
 }
