--- a/WebContent/style/main.css
+++ b/WebContent/style/main.css
@@ -73,6 +73,10 @@ h2
 	margin: 0 auto 0 auto;
 	
 	border: 4px solid #DDD;
+	
+	-webkit-box-shadow: 0px 0px 82px 0px rgba(181,181,181,1);
+	-moz-box-shadow: 0px 0px 82px 0px rgba(181,181,181,1);
+	box-shadow: 0px 0px 82px 0px rgba(181,181,181,1);
 }
 
 #wrapper > p
